--- a/ec2/package.json
+++ b/ec2/package.json
@@ -6,5 +6,10 @@
     "squel": "^5.12.1",
     "superagent": "^3.8.3",
     "winston": "^3.0.0-rc3"
+  },
+  "renovate": {
+    "extends": [
+      "config:base"
+    ]
   }
 }
